@@ -1,11 +1,19 @@
 2003-11-17  Alper Ersoy  <dirt@gtk.org>
 
+	* makeinfo/makeinfo.c (execute_string): end paragraphs if
+	executing @copying text with xml.
+
+	* makeinfo/xml.c: disallow nested quotations, legalnotice in abstract,
+	and samp in var with Docbook.
+
+2003-11-17  Alper Ersoy  <dirt@gtk.org>
+
 	* makeinfo/insertion.c (begin_insertion): keep @copying state.
 	use legalnotice instead of abstract for @copying.
 	(cm_insert_copying): removed redundant work arounds.
 
 	* makeinfo/makeinfo.c (execute_string): try to keep tags balanced with
-	Docbook and XML.
+	Docbook and xml.
 
 	* makeinfo/xml.c
 	(xml_current_stack_index, xml_end_current_element): new functions.
